--- a/Day 3/Portofolio.html
+++ b/Day 3/Portofolio.html
@@ -20,9 +20,9 @@
     </div>
     </div>
     <div id="profile">
-    <img src="Udin.png" alt="udin"    />
+    <img src="Foto Diri 2.jpeg" alt="udin"    />
     <div id="paragraph">
-    <div id="intro">Hello! I Am Udin Josefi</div>
+    <div id="intro">Hello! My Name is Thomas Alvin Yeo</div>
     <div style="color: green;"><br> UI/UX Designer <br></div>
     <div id="introduction"> <br> I am a Programer who just started a few months ago with <br>
          next to little experience on front end developing rom Purwadhika i <br>
